fixed spacing and design changes

--- a/static/Home.css
+++ b/static/Home.css
@@ -4,6 +4,7 @@
 }
 .col-left {
     display: inline-block;
+    padding-top:100px;
 }
 .col-right {
     display: inline-block;
